--- a/src/index.less
+++ b/src/index.less
@@ -52,12 +52,11 @@ body {
 
 #video-camera {
     position: absolute;
-    right: -30px;
-    bottom: -200px;
-    transform: scale(1.1);
+    right: -9vh;
+    bottom: -27vh;
 
     #camera-body {
-        height: 100vh;
+        height: 109vh;
     }
 
     #camera-screen > * {
@@ -450,27 +449,14 @@ body {
     #content {
         background-size: auto 100%;
         perspective: none;
-        height: 95vh;
+        height: 92vh;
         min-height: 0;
         min-width: 0;
         box-shadow: 0 0 10px black;
     }
 
-    #title {
-        top: 0;
-        left:50%;
-        transform: translateX(-47%) scale(0.7);
-        transform-origin: 50% 15%;
-    }
-
     #lower-third, #content .social, #gears, #content .copyright, #subscribed {
         display: none;
-    }
-
-    #video-camera {
-        right: -310px;
-        bottom: -120px;
-        transform: scale(0.85);
     }
 
     #footer {
@@ -520,12 +506,44 @@ body {
     }
 }
 
+// Mobile portrait
+@media only screen
+and (max-device-width: 850px)
+and (orientation: portrait) {
+    #title {
+        top: 0;
+        left:50%;
+        transform: translateX(-47%) scale(0.7);
+        transform-origin: 50% 15%;
+    }
+
+    #video-camera {
+        right: -31vh;
+        bottom: -13vh;
+
+        #camera-body {
+            height: 80vh;
+        }
+    }
+}
+
 // Mobile landscape
 @media only screen
 and (max-device-width: 850px)
 and (orientation: landscape) {
     #content {
         background-size: 100% auto;
+
+        #title {
+            transform: translateY(-50%) scale(0.55);
+            transform-origin: 0 30%;
+            top: 50%;
+        }
+
+        #video-camera {
+            bottom: -24vh;
+            right: -30vh;
+        }
     }
 
     #mobile-footer {
